syntax = "proto3";

package scheduler.scheduler_engine.v1;

option java_multiple_files = true;
option java_package = "com.scheduler.scheduler_engine.proto.v1";
option java_outer_classname = "TaskEngineProto";
// option go_package = "github.com/yourorg/yourrepo/proto/scheduler/scheduler_engine/v1;enginev1";

service TaskEngine {
  rpc RegisterTask (RegisterTaskRequest) returns (RegisterTaskResponse);
  rpc DeleteTask   (DeleteTaskRequest)   returns (DeleteTaskResponse);
  rpc Ping         (PingRequest)         returns (PingResponse);
}

// Keep your existing fields but switch to snake_case (protobuf convention).
// If you must keep the camelCase names for now, you can â€” the wire format is keyed by numbers.
message RegisterTaskRequest {
  string ssuuid            = 1;  // scheduler system user id
  string message           = 2;  // text to log
  string idempotency_key   = 3;  // unique per ssuuid for idempotency
  // Optional future additions (do NOT renumber existing tags):
  // int32  interval_seconds = 4;
  // optional int32 priority  = 5;
}

message RegisterTaskResponse {
  string task_id                      = 1; // UUID as string
  // google.protobuf.Timestamp created_at = 2; // add later if useful
}

message DeleteTaskRequest {
  string task_id = 1;
}

message DeleteTaskResponse {
  bool deleted = 1;
}

message PingRequest {}
message PingResponse {
  string status                         = 1; // e.g., "ok"
  // google.protobuf.Timestamp server_time = 2;
}
